<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_results"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ResultsActivity">

    <TextView
        android:id="@+id/grade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:text="@string/congratulations"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/outOf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/grade"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:text="@string/you_scored_8_out_of_9"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="20sp" />

    <Button
        android:id="@+id/retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/outOf"
        android:layout_centerHorizontal="true"
        android:layout_margin="4dp"
        android:background="#4CAF50"
        android:padding="8dp"
        android:text="@string/retry_quiz"
        android:textColor="#fff"
        android:textSize="18sp" />

</RelativeLayout>